--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
       <button>Choose This Plan</button>
     </div>
   </div>
-<script>
-  <script type='text/javascript'>
+<script type='text/javascript'>
 	function initEmbeddedMessaging() {
 		try {
 			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
@@ -105,6 +104,7 @@
 			console.error('Error loading Embedded Messaging: ', err);
 		}
 	};
+</script>
 <script type='text/javascript' src='https://ms-impulse--devb2c.sandbox.my.site.com/ESWWebMessagingPurchase1752838360016/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </body>
 </html>
